--- a/src/BurnSystems.FlexBG.Test/BurnSystems.FlexBG.Test.csproj
+++ b/src/BurnSystems.FlexBG.Test/BurnSystems.FlexBG.Test.csproj
@@ -62,6 +62,8 @@
     <Compile Include="MapVoxelStorage\MapGeneratorTests.cs" />
     <Compile Include="MapVoxelStorage\VoxelMapTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rules\TestPlayerRules.cs" />
+    <Compile Include="Rules\RuleHelper.cs" />
     <Compile Include="UserM\WebUserTests.cs" />
     <Compile Include="WayPointCalculationM\TestOnlyHeights.cs" />
   </ItemGroup>
