ObjectPosition instead of Vector3D PlayerController and GameObjectController

--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Modules\DeponNet\BuildingM\Interface\IBuildingManagement.cs" />
     <Compile Include="Modules\DeponNet\BuildingM\Interface\IBuildingTypeProvider.cs" />
     <Compile Include="Modules\DeponNet\BuildingM\LocalBuildingDatabase.cs" />
+    <Compile Include="Modules\DeponNet\Common\ObjectPosition.cs" />
     <Compile Include="Modules\DeponNet\GameConfig.cs" />
     <Compile Include="Modules\DeponNet\EntityType.cs" />
     <Compile Include="Modules\DeponNet\GameClockM\GameClockInfo.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="Modules\DeponNet\MapM\Admin\VoxelMapAdminController.cs" />
     <Compile Include="Modules\DeponNet\MapM\Admin\VoxelMapAdminInterface.cs" />
     <Compile Include="Modules\DeponNet\MapM\Admin\MapTreeViewItem.cs" />
+    <Compile Include="Modules\DeponNet\MapM\Controllers\GameObjectsController.cs" />
     <Compile Include="Modules\DeponNet\MapM\FieldCoordinates.cs" />
     <Compile Include="Modules\DeponNet\MapM\FieldTypes.cs" />
     <Compile Include="Modules\DeponNet\PlayerM\Admin\Models\DropPlayerModel.cs" />
@@ -86,6 +88,7 @@
     <Compile Include="Modules\DeponNet\PlayerM\Admin\PlayersAdminController.cs" />
     <Compile Include="Modules\DeponNet\PlayerM\Admin\PlayersTreeViewItem.cs" />
     <Compile Include="Modules\DeponNet\PlayerM\Admin\PlayerTreeViewItem.cs" />
+    <Compile Include="Modules\DeponNet\PlayerM\Controllers\DeponPlayersController.cs" />
     <Compile Include="Modules\DeponNet\PlayerM\Interface\IPlayerManagement.cs" />
     <Compile Include="Modules\DeponNet\PlayerM\LocalPlayerDatabase.cs" />
     <Compile Include="Modules\DeponNet\PlayerM\Player.cs" />
