--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -141,9 +141,9 @@
     <Compile Include="Modules\DeponNet\UnitM\UnitType.cs" />
     <Compile Include="Modules\DeponNet\UnitM\UnitTypeProvider.cs" />
     <Compile Include="Modules\FlexBgModule.cs" />
-    <Compile Include="Modules\GameInfoM\GameInfo.cs" />
-    <Compile Include="Modules\GameInfoM\GameInfoProvider.cs" />
-    <Compile Include="Modules\GameInfoM\IGameInfoProvider.cs" />
+    <Compile Include="Modules\ServerInfoM\ServerInfo.cs" />
+    <Compile Include="Modules\ServerInfoM\ServerInfoProvider.cs" />
+    <Compile Include="Modules\ServerInfoM\IServerInfoProvider.cs" />
     <Compile Include="Modules\GenericObjectStorageM\Entry.cs" />
     <Compile Include="Modules\GenericObjectStorageM\Extensions.cs" />
     <Compile Include="Modules\GenericObjectStorageM\RuntimeStore.cs" />
