--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Modules\DeponNet\BuildingM\LocalBuildingDatabase.cs" />
     <Compile Include="Modules\DeponNet\Common\ObjectPosition.cs" />
     <Compile Include="Modules\DeponNet\DataProvider\FieldInfoController.cs" />
+    <Compile Include="Modules\DeponNet\DataProvider\GameInfoController.cs" />
+    <Compile Include="Modules\DeponNet\DataProvider\PlayerInfoController.cs" />
     <Compile Include="Modules\DeponNet\GameClockM\Controllers\GameClockController.cs" />
     <Compile Include="Modules\DeponNet\GameConfig.cs" />
     <Compile Include="Modules\DeponNet\EntityType.cs" />
@@ -107,17 +109,22 @@
     <Compile Include="Modules\DeponNet\RegionM\Region.cs" />
     <Compile Include="Modules\DeponNet\ResearchM\Research.cs" />
     <Compile Include="Modules\DeponNet\ResourceSetM\Extension.cs" />
+    <Compile Include="Modules\DeponNet\ResourceSetM\Interface\IResourceManagement.cs" />
+    <Compile Include="Modules\DeponNet\ResourceSetM\Interface\IResourceTypeProvider.cs" />
+    <Compile Include="Modules\DeponNet\ResourceSetM\ResourceManagement.cs" />
     <Compile Include="Modules\DeponNet\ResourceSetM\ResourcesData.cs" />
     <Compile Include="Modules\DeponNet\ResourceSetM\LocalResourceDatabase.cs" />
     <Compile Include="Modules\DeponNet\ResourceSetM\ResourceSet.cs" />
     <Compile Include="Modules\DeponNet\ResourceSetM\ResourceSetBag.cs" />
     <Compile Include="Modules\DeponNet\ResourceSetM\ResourceType.cs" />
+    <Compile Include="Modules\DeponNet\ResourceSetM\ResourceTypeProvider.cs" />
     <Compile Include="Modules\DeponNet\Rules\EconomyTick\EconomyTickExecution.cs" />
     <Compile Include="Modules\DeponNet\Rules\MilitaryTick\MilitaryTickExecution.cs" />
-    <Compile Include="Modules\DeponNet\Rules\PlayerRulesM\IPlayerRules.cs" />
+    <Compile Include="Modules\DeponNet\Rules\PlayerRulesM\IPlayerRulesLogic.cs" />
+    <Compile Include="Modules\DeponNet\Rules\PlayerRulesM\PlayerRulesConfig.cs" />
     <Compile Include="Modules\DeponNet\Rules\UnitRulesM\IUnitJobRules.cs" />
     <Compile Include="Modules\DeponNet\Rules\PlayerRulesM\PlayerCreationParams.cs" />
-    <Compile Include="Modules\DeponNet\Rules\PlayerRulesM\PlayerRules.cs" />
+    <Compile Include="Modules\DeponNet\Rules\PlayerRulesM\PlayerRulesLogic.cs" />
     <Compile Include="Modules\DeponNet\Rules\UnitRulesM\UnitFightRound.cs" />
     <Compile Include="Modules\DeponNet\Rules\UnitRulesM\UnitJobRules.cs" />
     <Compile Include="Modules\DeponNet\Rules\UnitRulesM\UnitMoveJobRule.cs" />
