--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -156,6 +156,8 @@
     <Compile Include="Modules\DeponNet\UnitM\UnitType.cs" />
     <Compile Include="Modules\DeponNet\UnitM\UnitTypeProvider.cs" />
     <Compile Include="Modules\FlexBgModule.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Storage\VoxelMapColumn.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Storage\VoxelMapDataItem.cs" />
     <Compile Include="Modules\ServerInfoM\ServerInfo.cs" />
     <Compile Include="Modules\ServerInfoM\ServerInfoProvider.cs" />
     <Compile Include="Modules\ServerInfoM\IServerInfoProvider.cs" />
