--- a/src/BurnSystems.FlexBG.Test/packages.config
+++ b/src/BurnSystems.FlexBG.Test/packages.config
@@ -1,6 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="1.2.11" />
-  <package id="Ninject" version="2.2.1.4" />
-  <package id="NUnit" version="2.5.10.11092" />
+  <package id="NUnit" version="2.6.2" targetFramework="net45" />
 </packages>
