--- a/src/BurnSystems.FlexBG.Test/BurnSystems.FlexBG.Test.csproj
+++ b/src/BurnSystems.FlexBG.Test/BurnSystems.FlexBG.Test.csproj
@@ -38,6 +38,14 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MongoDB.Bson, Version=1.8.1.20, Culture=neutral, PublicKeyToken=f686731cfb9cc103, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\mongocsharpdriver.1.8.1\lib\net35\MongoDB.Bson.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Driver, Version=1.8.1.20, Culture=neutral, PublicKeyToken=f686731cfb9cc103, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\mongocsharpdriver.1.8.1\lib\net35\MongoDB.Driver.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -53,6 +61,8 @@
   <ItemGroup>
     <Compile Include="BaseProviderByIdM\TestIndexProvider.cs" />
     <Compile Include="BaseProviderByIdM\TestProvider.cs" />
+    <Compile Include="Database\MongoDb\MongoDbTests.cs" />
+    <Compile Include="Database\MongoDb\UserTests.cs" />
     <Compile Include="GenericObjectStorageM\TestStorage.cs" />
     <Compile Include="LockMasterM\TestSimpleLocking.cs" />
     <Compile Include="MapVoxelStorage\ColumnTests.cs" />
