--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -177,6 +177,8 @@
     <Compile Include="Modules\DeponNet\UnitM\UnitType.cs" />
     <Compile Include="Modules\DeponNet\UnitM\UnitTypeProvider.cs" />
     <Compile Include="Modules\FlexBgModule.cs" />
+    <Compile Include="Modules\MailSenderM\AdminMailSender.cs" />
+    <Compile Include="Modules\MailSenderM\IAdminMailSender.cs" />
     <Compile Include="Modules\MailSenderM\IUserMailSender.cs" />
     <Compile Include="Modules\MailSenderM\UserMailSender.cs" />
     <Compile Include="Modules\MailSenderM\UserMailSenderSettings.cs" />
