Consolidation of different userdatabases into one usermanagementframework for the more complex function. Work is not done yet, additional work is required

--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Modules\UserM\Interfaces\IUserManagement.cs" />
     <Compile Include="Modules\UserM\Logic\Admin\GroupsTreeView.cs" />
     <Compile Include="Modules\UserM\Logic\Admin\UserAdminInterface.cs" />
+    <Compile Include="Modules\UserM\Logic\UserManagementFramework.cs" />
     <Compile Include="Modules\UserM\Logic\Admin\UsersTreeView.cs" />
     <Compile Include="Modules\UserM\Logic\AllowOnlyIfUserIsInGroupFilter.cs" />
     <Compile Include="Modules\UserM\Logic\CurrentUserHelper.cs" />
