--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BurnSystems.FlexBG</RootNamespace>
     <AssemblyName>BurnSystems.FlexBG</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <ProductVersion>10.0.0</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,25 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MongoDB.Bson">
-      <HintPath>..\..\..\..\src\packages\mongocsharpdriver.1.8.1\lib\net35\MongoDB.Bson.dll</HintPath>
-    </Reference>
-    <Reference Include="MongoDB.Driver">
-      <HintPath>..\..\..\..\src\packages\mongocsharpdriver.1.8.1\lib\net35\MongoDB.Driver.dll</HintPath>
-    </Reference>
-    <Reference Include="BurnSystems.dll">
-      <HintPath>../../packages/bin/BurnSystems.dll</HintPath>
-    </Reference>
-    <Reference Include="BurnSystems.Parser.dll">
-      <HintPath>../../packages/bin/BurnSystems.Parser.dll</HintPath>
-    </Reference>
-    <Reference Include="BurnSystems.WebServer.dll">
-      <HintPath>../../packages/bin/BurnSystems.WebServer.dll</HintPath>
-    </Reference>
-    <Reference Include="BurnSystems.WebServer.Umbra.dll">
-      <HintPath>../../packages/bin/BurnSystems.WebServer.Umbra.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -58,6 +40,24 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="BurnSystems">
+      <HintPath>..\..\packages\bin\BurnSystems.dll</HintPath>
+    </Reference>
+    <Reference Include="BurnSystems.Parser">
+      <HintPath>..\..\packages\bin\BurnSystems.Parser.dll</HintPath>
+    </Reference>
+    <Reference Include="BurnSystems.WebServer">
+      <HintPath>..\..\packages\bin\BurnSystems.WebServer.dll</HintPath>
+    </Reference>
+    <Reference Include="BurnSystems.WebServer.Umbra">
+      <HintPath>..\..\packages\bin\BurnSystems.WebServer.Umbra.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Bson">
+      <HintPath>..\..\packages\MongoDB.Bson.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Driver">
+      <HintPath>..\..\packages\MongoDB.Driver.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helper\ProviderByIdM\BaseProviderById.cs" />
@@ -277,6 +277,7 @@
     <Compile Include="Modules\WayPointCalculationM\OnlyHeight\WayPointCalculation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime.cs" />
+    <Compile Include="Modules\DeponNet\Common\Vector3D.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="htdocs\admin\js\lib\viewtypes\flexbg.viewtypes.voxelmapview.js">
